fix: improve theme color contrast

--- a/src/styles/dcadditive.css
+++ b/src/styles/dcadditive.css
@@ -1,34 +1,34 @@
 /* theme for dev.css v3, a classless CSS framework - https://github.com/intergrav/dev.css */
-/* about: theme for Additive's SkywardMC page, based on Catppuccin Mocha and Latte */
+/* about: theme for Additive's SkywardMC page */
 
 :root {
 	/* light colors */
 	--dc-cs: light;
-	--dc-tx-1: #694c4c;
-	--dc-tx-2: #694c4c;
-	--dc-bg-1: #efe6e6;
-	--dc-bg-2: #f5efef;
-	--dc-bg-3: #dacccc;
-	--dc-lk-1: #bf2b2b;
-	--dc-lkb-1: #ccbcbc;
-	--dc-lkb-2: #dacccc;
-	--dc-lkb-tx: #694c4c;
-	--dc-ac-1: #bf2b2b;
-	--dc-ac-tx: #f5efef;
+	--dc-tx-1: #000000;
+	--dc-tx-2: #000000;
+	--dc-bg-1: #F1E8E8;
+	--dc-bg-2: #F6F1F1;
+	--dc-bg-3: #DED1D1;
+	--dc-lk-1: #AC2727;
+	--dc-lkb-1: #D1C3C3;
+	--dc-lkb-2: #DED1D1;
+	--dc-lkb-tx: #000000;
+	--dc-ac-1: #AC2727;
+	--dc-ac-tx: #F6F1F1;
 
 	/* dark colors */
 	--dc-d-cs: dark;
-	--dc-d-tx-1: #f4cdcd;
-	--dc-d-tx-2: #f4cdcd;
-	--dc-d-bg-1: #251818;
+	--dc-d-tx-1: #F7DADA;
+	--dc-d-tx-2: #F7DADA;
+	--dc-d-bg-1: #221616;
 	--dc-d-bg-2: #2e1e1e;
-	--dc-d-bg-3: #443131;
-	--dc-d-lk-1: #fa8989;
-	--dc-d-lkb-1: #5a4545;
-	--dc-d-lkb-2: #443131;
-	--dc-d-lkb-tx: #f4cdcd;
-	--dc-d-ac-1: #f7a6a6;
-	--dc-d-ac-tx: #2e1e1e;
+	--dc-d-bg-3: #332525;
+	--dc-d-lk-1: #FBA7A7;
+	--dc-d-lkb-1: #433434;
+	--dc-d-lkb-2: #332525;
+	--dc-d-lkb-tx: #F7DADA;
+	--dc-d-ac-1: #FBA7A7;
+	--dc-d-ac-tx: #221616;
 }
 
 @media (prefers-color-scheme: dark) {
